* Fixed support for Poppler (pdftops) as postscript backend.
  Thanks to Chris Mayo for the patch. Closes merge request #18
* - Reload recursion limit in Edit/Preferences
  Set reload recursion limit as triangular number of number of scan options.
  i.e. if there are 5 scan options, the recursion limit is 5+4+3+2+1=15
  Closes bug #275 (reload recursion limit)


1.8.6 (22.08.2017):

* Fixed visibility of options for DjVu, JPEG, & TIFF in save dialogue.
* + Reload recursion limit in Edit/Preferences
  Break of out reload recursion loop if maximum number of reloads is exceeded.
* Reapply only those current scan settings that were reset by the reload
* Fixed unpaper detection for v0.3.
  Closes bug #273 (t/355_unpaper2.t test fails in gscan2pdf-1.8.5)


1.8.5 (18.08.2017):

* + support for Poppler (pdftops) as postscript backend.
* - support for libsane-perl
* Reapply current scan settings for those scanners that reset them when forcing
  a reload
* Eliminate unnecessary strings from gscan2pdf.pot to prevent unnecessary work
  and confusion on the part of the translators.
* + A3 to default paper sizes. Closes bug #262 (No "A3" paper size profile)
* Update to Hungarian translation (thanks to csola)
* Update to Slovak translation (thanks to Dušan Kazik)


1.8.4 (28.07.2017):

* Cope with Tesseract 3.0.5 writing Page 1 instead of Page 0
  Thanks to Chris Mayo for the patch. Closes merge request #14
* Assume pixels/inch if the image doesn't know better. Closes bug #258
  (Tesseract 3.05.01: Warning. Invalid resolution 0 dpi. Using 70 instead)
* Fix paragraph formatting in save as text output.
  Thanks to Chris Mayo for the patch. Closes merge request #16
* In preparation for future removal of libsane-perl frontend, change default
  frontend libsane-perl -> libimage-sane-perl, and similarly switch selected
  frontend on upgrade from older version. Assuming no major problems occur,
  support for libsane-perl will be removed in the next release.