@@ -184,6 +184,7 @@ t/06290_Dialog_Scan_CLI.t
 t/06291_Dialog_Scan_CLI.t
 t/06292_Dialog_Scan_CLI.t
 t/06293_Dialog_Scan_CLI.t
+t/06294_Dialog_Scan_CLI.t
 t/06295_Dialog_Scan_CLI.t
 t/07_Dialog_Renumber.t
 t/081_Frontend_CLI.t
